# hd-camilo

./: .gitignore  Makefile
3-PY/: ppxml.py  substDict.py  tagReplacer.py
4g-Henrique,Raquel,Willy/: README.md  expanAbbr.py  mgrep.py  ppxml.py  proposta.sh  rendx.html  substDict.py  tagReplacer.py  untag_xml.py
AVD/: intrucoes.md
AVD/Tools/OneSentPerLine/: one_sent_per_line.py  pyproject.toml
Conceicao-PI/: TESTE5.py  obras.html
Conceição Projeto Integrado/: Markdown PI.html  TESTE1.py  TESTE12.py  TESTE3.py
Doc/: recortes.dtd  recortespt.dtd
OCR_Grupo_4 (Henrique, Raquel e Willy)/: rec.html  render.py
OCR_Grupo_4-Henrique,Raquel,Willy/: ColemanLiau_index.py  README.md  classificaTexto.py  ppxml.py  regOrig.py  render.py  style.css  substDict.py  webspacy.py
Obra/: Camilo-A_Brasileira_de_Prazins.txt  Camilo-A_Gratidao.txt  Camilo-A_Infanta_Capelista.txt  Camilo-A_Morgada_de_Romariz.txt  Camilo-A_enjeitada.txt  Camilo-A_filha_do_Acerdiago.txt  Camilo-A_filha_do_doutor_negro.txt  Camilo-A_mulher_fatal.txt  Camilo-A_neta_do_arcediago.txt  Camilo-A_queda_de_um_Anjo-Grafia_actualizada.txt  Camilo-A_queda_de_um_Anjo-Grafia_da_Epoca.txt  Camilo-A_senhora_Rattazzi.txt  Camilo-A_velhice_do_Padre_Eterno-Estudo.txt  Camilo-A_viuva_do_enforcado.txt  Camilo-Agostinho_de_Ceuta-Teatro_histórico-Vol_1.txt  Camilo-Amor_de_Perdicao.txt  Camilo-Carlota_Angela.txt  Camilo-Cenas_da_Foz.txt  Camilo-Coisas_que_so_eu_sei.txt  Camilo-Coracao_cabeca_e_estomago.txt  Camilo-Doze_casamentos_felizes.txt  Camilo-Duas_Horas_de_Leitura.txt  Camilo-Esbocos_de_apreciacoes_literarias.txt  (+41 more)
(+142 files in other folders)
